--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -5,9 +5,9 @@ import Admonition from "@theme/Admonition";
 
 # 👋 Welcome to Langflow
 
-Langflow is a low-code platform that allows you to integrate AI into everything you do.
+Langflow is a new, visual way to build, iterate, and deploy AI applications.
 
-Use Langflow's simple but powerful UI to build any AI application you can dream up, from simple to complex.
+Its intuitive interface allows for easy manipulation of AI building blocks, enabling developers to quickly prototype and turn their ideas into powerful, real-world solutions.
 
 {" "}
 
