--- a/docs/docs/getting-started/install-langflow.mdx
+++ b/docs/docs/getting-started/install-langflow.mdx
@@ -6,52 +6,48 @@ import Admonition from "@theme/Admonition";
 # 📦 Install Langflow
 
 <Admonition type="info">
-  Langflow v1.0 is also available in a [HuggingFace Preview Space](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true) if you'd rather try it out before installing locally.
+
+Langflow v1.0 alpha is also available in [HuggingFace Spaces](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true). Try it out or follow the instructions [here](./huggingface-spaces) to install it locally.
+
 </Admonition>
 
-## Prerequisites
+Langflow requires [Python 3.10](https://www.python.org/downloads/release/python-3100/) and [pip](https://pypi.org/project/pip/) or [pipx](https://pipx.pypa.io/stable/installation/) to be installed on your system.
 
-Langflow requires the following programs installed on your system.
+Install Langflow with pip:
 
-* [Python 3.10](https://www.python.org/downloads/release/python-3100/)
-
-* [pip](https://pypi.org/project/pip/) or [pipx](https://pipx.pypa.io/stable/installation/)
-
-## Install Langflow
-
-To install Langflow:
-
-pip:
 ```bash
 python -m pip install langflow -U
 ```
 
-pipx:
+Install Langflow with pipx:
+
 ```bash
 pipx install langflow --python python3.10 --fetch-missing-python
 ```
+
 Pipx can fetch the missing Python version for you with `--fetch-missing-python`, but you can also install the Python version manually.
 
-
 ## Install Langflow pre-release
-
-Use `--force-reinstall` to ensure you have the latest version of Langflow and its dependencies.
 
 To install a pre-release version of Langflow:
 
 pip:
+
 ```bash
 python -m pip install langflow --pre --force-reinstall
 ```
 
 pipx:
+
 ```bash
 pipx install langflow --python python3.10 --fetch-missing-python --pip-args="--pre --force-reinstall"
 ```
 
+Use `--force-reinstall` to ensure you have the latest version of Langflow and its dependencies.
+
 ## Having a problem?
 
-If you encounter a problem, see [Possible Installation Issues](/migration/possible-installation-issues).
+If you encounter a problem, see [Common Installation Issues](/migration/possible-installation-issues).
 
 To get help in the Langflow CLI:
 
@@ -62,11 +58,13 @@ python -m langflow --help
 ## ⛓️ Run Langflow
 
 1. To run Langflow, enter the following command.
+
 ```bash
 python -m langflow run
 ```
 
-2. Confirm that a local Langflow instance starts by visiting `http://127.0.0.1:7860` in your browser.
+2. Confirm that a local Langflow instance starts by visiting `http://127.0.0.1:7860` in a Chromium-based browser.
+
 ```bash
 │ Welcome to ⛓ Langflow                             │
 │                                                   │
