--- a/docs/docs/getting-started/quickstart.mdx
+++ b/docs/docs/getting-started/quickstart.mdx
@@ -6,64 +6,24 @@ import Admonition from "@theme/Admonition";
 
 # ⚡️ Quickstart
 
-This quickstart demonstrates how to install Langflow, run it locally, build a basic prompt flow, and modify that prompt for different outcomes.
+This guide demonstrates how to build a basic prompt flow and modify that prompt for different outcomes.
 
 ## Prerequisites
 
-* [Python 3.10](https://www.python.org/downloads/release/python-3100/)
+- [Langflow installed](./install-langflow.mdx)
 
-* [pip](https://pypi.org/project/pip/) or [pipx](https://pipx.pypa.io/stable/installation/)
-
-* [OpenAI API key](https://platform.openai.com)
-
-## Install Langflow
+- [OpenAI API key](https://platform.openai.com)
 
 <Admonition type="info">
-  Langflow v1.0 is also available in a [HuggingFace Preview Space](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true) if you'd rather try it out before installing locally. This quickstart will run there, too.
+  Langflow v1.0 alpha is also available in [HuggingFace
+  Spaces](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true).
+  Try it out or follow the instructions [here](./huggingface-spaces) to install
+  it locally.
 </Admonition>
 
-1. To install Langflow, enter the following command in pip or pipx:
+## Hello World - Basic Prompting
 
-pip:
-```bash
-python -m pip install langflow -U
-```
-
-pipx:
-```bash
-pipx install langflow --python python3.10 --fetch-missing-python
-```
-Pipx can fetch the missing Python version for you with `--fetch-missing-python`, but you can also install the Python version manually.
-
-2. Start a local Langflow instance with the Langflow CLI:
-```bash
-langflow run
-```
-
-Or start Langflow with Python:
-```bash
-python -m langflow run
-```
-
-Result:
-```
-│ Welcome to ⛓ Langflow                             │
-│                                                   │
-│ Access http://127.0.0.1:7860                      │
-│ Collaborate, and contribute at our GitHub Repo 🚀 │
-```
-
-3. Go to `http://127.0.0.1:7860` and confirm the Langflow UI is available.
-
-<Admonition type="info">
-    If you encounter a problem, see [Possible Installation Issues](/migration/possible-installation-issues).
-</Admonition>
-
-## Create the basic prompting project
-
-Now that you have Langflow installed and running, let us formally welcome you to Langflow!👋
-
-You will use Langflow's prompt tools to issue prompts to the OpenAI LLM.
+Let's start with a Prompt component to instruct an OpenAI Model.
 
 Prompts serve as the inputs to a large language model (LLM), acting as the interface between human instructions and computational tasks.
 
@@ -82,38 +42,39 @@ By submitting natural language requests in a prompt to an LLM, you can obtain an
   style={{ width: "80%", margin: "20px auto" }}
 />
 
-This flow allows you to chat with the **OpenAI** component via a **Prompt** component.
+This flow allows you to chat with the **OpenAI** component via a **Prompt**.
 Examine the **Prompt** component. The **Template** field instructs the LLM to `Answer the user as if you were a pirate.`
 This should be interesting...
 
 4. To create an environment variable for the **OpenAI** component, in the **OpenAI API Key** field, click the **Globe** button, and then click **Add New Variable**.
-    1. In the **Variable Name** field, enter `openai_api_key`.
-    2. In the **Value** field, paste your OpenAI API Key (`sk-...`).
-    3. Click **Save Variable**.
+   1. In the **Variable Name** field, enter `openai_api_key`.
+   2. In the **Value** field, paste your OpenAI API Key (`sk-...`).
+   3. Click **Save Variable**.
 
 ## Run the basic prompting flow
 
 1. Click the **Run** button.
-The **Interaction Panel** opens, where you can converse with your bot.
+   The **Interaction Panel** opens, where you can chat with your bot.
 2. Type a message and press Enter.
-The bot responds in a markedly piratical manner!
+   And... Ahoy! 🏴‍☠️
+   The bot responds in a piratical manner!
 
 ## Modify the prompt for a different result
 
 1. To modify your prompt results, in the **Prompt** template, click the **Template** field.
-The **Edit Prompt** window opens.
+   The **Edit Prompt** window opens.
 2. Change `Answer the user as if you were a pirate` to a different character, perhaps `Answer the user as if you were Harold Abelson.`
 3. Run the basic prompting flow again.
-The response will be markedly different.
+   The response will be markedly different.
 
 ## Next steps
 
 Well done! You've built your first prompt in Langflow. 🎉
 
-By adding Langflow components to this prompt, you can build all sorts of interesting flows.
+By adding Langflow components to your flow, you can create all sorts of interesting behaviors.
 
-* [Memory chatbot](/starter-projects/memory-chatbot.mdx)
-* [Blog writer](/starter-projects/blog-writer.mdx)
-* [Document QA](/starter-projects/document-qa.mdx)
+Here are a couple of examples:
 
-
+- [Memory chatbot](/starter-projects/memory-chatbot.mdx)
+- [Blog writer](/starter-projects/blog-writer.mdx)
+- [Document QA](/starter-projects/document-qa.mdx)
