--- a/docs/docs/getting-started/huggingface-spaces.mdx
+++ b/docs/docs/getting-started/huggingface-spaces.mdx
@@ -5,11 +5,11 @@ import Admonition from "@theme/Admonition";
 
 # 🤗 HuggingFace Spaces
 
-Hugging Face provides a great alternative for running Langflow in their Spaces environment. This means you can run Langflow without any local installation required.
+HuggingFace provides a great alternative for running Langflow in their Spaces environment. This means you can run Langflow without any local installation required.
 
-The first step is to go to the [Langflow Space](https://huggingface.co/spaces/Langflow/Langflow?duplicate=true) or [Langflow 1.0 Preview Space](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true)
+In a Chromium-based browser, go to the [Langflow Space](https://huggingface.co/spaces/Langflow/Langflow?duplicate=true) or [Langflow v1.0 alpha Preview Space](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true).
 
-Remember to use a Chromium-based browser for the best experience. You'll be presented with the following screen:
+You'll be presented with the following screen:
 
 <ZoomableImage
   alt="Docusaurus themed image"
@@ -20,8 +20,19 @@ Remember to use a Chromium-based browser for the best experience. You'll be pres
   style={{ width: "100%", margin: "20px auto" }}
 />
 
-From here, just name your Space, define the visibility (Public or Private), and click on `Duplicate Space` to start the installation process. When that is done, you'll be redirected to the Space's main page to start using Langflow right away!
+Name your Space, define the visibility (Public or Private), and click on `Duplicate Space` to start the installation process. When installation is finished, you'll be redirected to the Space's main page to start using Langflow right away!
 
-Once you get Langflow running, click on New Project in the top right corner of the screen. Langflow provides a range of example flows to help you get started.
+## Run a starter project
 
-To quickly try one of them, open a starter example, set up your API keys and click ⚡ Run, on the bottom right corner of the canvas. This will open up Langflow's Interaction Panel with the chat console, text inputs, and outputs.
+Langflow provides a range of example flows to help you get started.
+
+Once you get Langflow running in your Space, click on **New Project** in the top right corner of the screen.
+
+Select a starter project from the list, set up your API keys, and click ⚡ Run. This will open up Langflow's Interaction Panel with the chat console, text inputs, and outputs ready to go.
+
+For more information on the starter projects, see the guides below:
+
+* [Basic prompting](/starter-projects/basic-prompting.mdx)
+* [Memory chatbot](/starter-projects/memory-chatbot.mdx)
+* [Blog writer](/starter-projects/blog-writer.mdx)
+* [Document QA](/starter-projects/document-qa.mdx)
