hf-spaces-and-lightning-admonition
(cherry picked from commit 206e4da1d5abd995b8732299d3b103caa03e7c4c)

--- a/docs/docs/starter-projects/blog-writer.mdx
+++ b/docs/docs/starter-projects/blog-writer.mdx
@@ -32,7 +32,11 @@ Result:
 │ Collaborate, and contribute at our GitHub Repo 🚀 │
 ```
 
-Alternatively, go to [HuggingFace Spaces](https://docs.langflow.org/getting-started/hugging-face-spaces) or [Lightning.ai Studio](https://lightning.ai/ogabrielluiz-8j6t8/studios/langflow) for a pre-built Langflow test environment.
+<Admonition type="info">
+
+  Langflow v1.0 alpha is also available in [HuggingFace Spaces](https://huggingface.co/spaces/Langflow/Langflow-Preview?duplicate=true). Try it out or follow the instructions [here](getting-started/huggingface-spaces) to install it locally.
+
+</Admonition>
 
 3. Create an [OpenAI API key](https://platform.openai.com).
 
