--- a/docs/docs/getting-started/huggingface-spaces.mdx
+++ b/docs/docs/getting-started/huggingface-spaces.mdx
@@ -20,7 +20,7 @@ You'll be presented with the following screen:
   style={{ width: "100%", margin: "20px auto" }}
 />
 
-Name your Space, define the visibility (Public or Private), and click on `Duplicate Space` to start the installation process. When installation is finished, you'll be redirected to the Space's main page to start using Langflow right away!
+Name your Space, define the visibility (Public or Private), and click on **Duplicate Space** to start the installation process. When installation is finished, you'll be redirected to the Space's main page to start using Langflow right away!
 
 ## Run a starter project
 
