Update langchain-pinecone dependency and add Pinecone API key (#1854)
* Update langchain-pinecone dependency and related code

* Add Pinecone API key to environment variables

* Fix commented out code in codeTabsComponent, parameterComponent, and editNodeModal

* Add PineconeSearchComponent to PineconeSearch.py

* Update PineconeComponent to accept pinecone_api_key as optional parameter

(cherry picked from commit 21be1268aef70c3a5a7cd4b65ad1b997987940f1)

--- a/docs/docs/migration/global-variables.mdx
+++ b/docs/docs/migration/global-variables.mdx
@@ -101,6 +101,7 @@ The default list at the moment is:
 - GOOGLE_API_KEY
 - HUGGINGFACEHUB_API_TOKEN
 - OPENAI_API_KEY
+- PINECONE_API_KEY
 - SEARCHAPI_API_KEY
 - SERPAPI_API_KEY
 - VECTARA_CUSTOMER_ID
