Add GroqLogo and GroqIcon components (#1853)
* Update package.json format command to include only specific directories

* Add GroqLogo component and GroqIcon to the project

* Update dependencies and add GroqModelSpecs component

* Fix nullable column issue in langflow/alembic/versions/6e7b581b5648_fix_nullable.py

* Add GroqModelSpecs component and update dependencies

* Update GroqModelSpecs and GroqModel display names

* chore: Add langchain-pinecone dependency and update constants.py

(cherry picked from commit a037bf99787aceed88e40b46eae38c063b8efa92)

--- a/docs/docs/migration/global-variables.mdx
+++ b/docs/docs/migration/global-variables.mdx
@@ -99,6 +99,7 @@ The default list at the moment is:
 - AZURE_OPENAI_API_VERSION
 - COHERE_API_KEY
 - GOOGLE_API_KEY
+- GROQ_API_KEY
 - HUGGINGFACEHUB_API_TOKEN
 - OPENAI_API_KEY
 - PINECONE_API_KEY
